@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center" >
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
     <ImageView
         android:id="@+id/sharecodeIV"
         android:layout_width="wrap_content"
@@ -12,16 +11,14 @@
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
         android:src="@drawable/nyala" />
-
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/nyShareTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/sharecodeIV"
         android:layout_alignLeft="@+id/sharecodeIV"
         android:layout_marginBottom="118dp"
         android:layout_marginLeft="78dp"
-        android:text="@string/empty_string"
-         />
+        android:text="@string/empty_string" />
    
-</RelativeLayout>
+</LinearLayout>
